# enso_ex

./: CMakeLists.txt  LICENSE  README-dev.md  README-recovery.md  README.md  create_vpk.sh  enso_ex.vpk  version.h
360_p/: first  logo.h  nsbl.h  second  second.c
365_p/: first  nsbl.h  second  second.c
bootmgr/lv0-0syscall6/: 0syscall6.c  bootmgr.c  bootmgr.e2xp  bootmgr.x
bootmgr/lv0-0syscall6/cp_payload/: Makefile  main.c
bootmgr/lv0-0syscall6/framework/: framework.h  main.c
bootmgr/lv0-0syscall6/install_zss/: Makefile  main.c  zss.h
bootmgr/lv0-0syscall6/sm_load_hook/: main.c  smlh.h
bootmgr/lv0-bob/: Makefile  bobloader.c  bootmgr.c  bootmgr.e2xp
bootmgr/lv0-bob/bob_loader/: Makefile  main.c  payload.h  types.h
bootmgr/lv0-bob/cp_payload/: inject_framework.h
bootmgr/lv0-typespoof/: bootmgr.c  bootmgr.e2xp  spl-defs.h
bootmgr/lv0-typespoof/payload/: dex_patch.h  main.c
cbanim/: Makefile  README.md  main.c
core/: Makefile  enso.h  ex_defs.h  first.c  gen.py  misc_bm.c  misc_bm.h  nskbl.h  second.c
data/: boot_list.txt  bootlogo.raw
enso/: Makefile  bm_compat.c  bm_compat.h  enso.h  ex_defs.h  first.c  nsbl.h  second.c
enso/360/: first.c  nsbl.h
enso/365/: nsbl.h
installer/: CMakeLists.txt
installer/src/: enso.h  fatcheck.h  kernel.c  kernel2.c  kernel_360.c  kernel_365.c  kernel_exports.yml  main.c  user.c  user_exports.yml
misc/BOOTMGR/0syscall6/: Makefile  bootmgr.c
misc/BOOTMGR/0syscall6/payload/: sk_rvk_patch.h
misc/BOOTMGR/0syscall6/payload/smlh/: Makefile  framework.h
misc/BOOTMGR/lv0_mods/: Makefile  bootmgr.c  bootmgr_360.e2xp  bootmgr_365.e2xp
misc/BOOTMGR/lv0_mods/0syscall6/: 0syscall6.c
misc/BOOTMGR/lv0_mods/0syscall6/install_zss/: main.c  zss.h
misc/BOOTMGR/lv0_mods/0syscall6/sm_load_hook/: Makefile
misc/BOOTMGR/lv0_mods/typespoof/: typespoof.c
misc/BOOTMGR/typespoof/kernel/: CMakeLists.txt
misc/BOOTMGR/typespoof/payload/: main.c
misc/LOWLEVEL/os0_flash/: Makefile  recovery.c
misc/PATCH/fw_spoof/: Makefile  exports.yml  kernel.c
misc/PATCH/int2ext_sector_redir/: Makefile  exports.yml  kernel.c
misc/PC/ll_recovery_mgr/: btest.img  recmgr  recovery.bkp  recovery_365.e2xp
misc/VITA/clone_int2ext/: Makefile  kernel.c
mmt/: CMakeLists.txt  exports.yml  main.c
modded/: kernel.c  nsbl.h  second.c
patches/: Makefile  clogo.c  hooking.h  patches.h  rconfig.c
patches/culogo/: kernel.c
patches/hencfg/: Makefile  exports.yml  kernel.c
patches/loader/: e2xhencfg.skprx  kernel.c
patches/loader/kernel_stubs/: SceKbl.yml
patches/loader/kernel_stubs/KblNids/: Makefile  SceKbl_SceKblForKernel_KblCheckDipsw_365.S  SceKbl_SceKblForKernel_KblCpuBarrierStart_365.S  SceKbl_SceKblForKernel_KblDeinitComm_365.S  SceKbl_SceKblForKernel_KblDeinitStorageHandlers_365.S  SceKbl_SceKblForKernel_KblDisableIrq_365.S  SceKbl_SceKblForKernel_KblExecSysrootx2d4_365.S  SceKbl_SceKblForKernel_KblExecSysrootx2d8_365.S  SceKbl_SceKblForKernel_KblExecSysrootx360x20_365.S  SceKbl_SceKblForKernel_KblGetCpuId_365.S  SceKbl_SceKblForKernel_KblGetDevRegs_365.S  SceKbl_SceKblForKernel_KblGetDipsw204And205Stat_365.S  SceKbl_SceKblForKernel_KblGetHwConfig_365.S  SceKbl_SceKblForKernel_KblIsCex_365.S  SceKbl_SceKblForKernel_KblIsDolce_365.S  SceKbl_SceKblForKernel_KblIsDoubleModel_365.S  SceKbl_SceKblForKernel_KblIsGenuineDolce_365.S  SceKbl_SceKblForKernel_KblIsModelx100_365.S  SceKbl_SceKblForKernel_KblIsModelx101_365.S  SceKbl_SceKblForKernel_KblIsModelx102_365.S  SceKbl_SceKblForKernel_KblIsNotDolce_365.S  SceKbl_SceKblForKernel_KblLoadModulesFromList_365.S  SceKbl_SceKblForKernel_KblParamx2dAnd1_365.S  SceKbl_SceKblForKernel_KblPrintf1_365.S  SceKbl_SceKblForKernel_KblPrintf3_365.S  SceKbl_SceKblForKernel_KblSetupStorages_365.S  SceKbl_SceKblForKernel_KblStartModulesFromList_365.S  SceKbl_SceKblForKernel_KblStopKASM_365.S  SceKbl_SceKblForKernel_KblSyncCpuSysrootx2c_365.S  SceKbl_SceKblForKernel_KblWriteModStartRegs_365.S
plugins/: hooking.h  plugins.h
plugins/culogo/: Makefile  exports.yml  kernel.c
plugins/hencfg/: kernel.c
plugins/loader/: Makefile  example_list.txt  exports.yml  kernel.c
recovery/: Makefile  bootstrap.c
recovery/blob/: blob.c
recovery/internal/default/: bootstrap.c
recovery/internal/default/blob/: Makefile  blob.c
recovery_ext/: instructions.txt
recovery_ext/files/: boot_list.txt  cmd.recovery  cmp.recovery  psp2config.skprx
recovery_ext/patch/: Makefile  e2xrecovr.skprx  exports.yml  kernel.c
res/360/: emmc_helper.skprx
res/365/: emmc_helper.skprx
sdrecovery/: recmgr.c
sdrecovery/BOOTMGR/0syscall6/: bootmgr.c  bootmgr_360.e2xp  bootmgr_365.e2xp
sdrecovery/BOOTMGR/0syscall6/payload/smlh/: main.c
sdrecovery/BOOTMGR/typespoof/: bootmgr.c
sdrecovery/BOOTMGR/typespoof/kernel/: main.c  typespoof.yml
sdrecovery/BOOTMGR/typespoof/payload/: Makefile  dex_patch.h
sdrecovery/LOWLEVEL/dump_nskbl/: Makefile  recovery.c
sdrecovery/LOWLEVEL/os0recovery/: Makefile  recovery.x  recovery_360.e2xp  recovery_365.e2xp
sdrecovery/PATCH/fw_spoof/: Makefile  fwspoof.c  fwspoof_360.e2xp  fwspoof_365.e2xp
sdrecovery/PATCH/int2ext_sector_redir/: Makefile  sector_int2ext.c
sdrecovery/PC/ll_recovery_mgr/: recmgr.c
sdrecovery/PC/xp2xd/: gen_patches.c
sdrecovery/VITA/clone_int2ext/: exports.yml  kernel.c
sdrecovery/recovery/: Makefile  recovery.c
src/: kernel.c  kernel2.c  main.c  user.c
src/360/: kernel.c
src/365/: kernel.c
